增加菜品相关接口，文件上传

--- a/sky-server/src/main/resources/application-dev.yml
+++ b/sky-server/src/main/resources/application-dev.yml
@@ -6,3 +6,6 @@ sky:
     database: sky_take_away
     username: root
     password: 962464
+  alioss:
+    endpoint: oss-cn-hangzhou.aliyuncs.com
+    bucketName: xiaopy-store
