--- a/sky-server/src/main/resources/application-dev.yml
+++ b/sky-server/src/main/resources/application-dev.yml
@@ -9,3 +9,8 @@ sky:
   alioss:
     endpoint: oss-cn-hangzhou.aliyuncs.com
     bucketName: xiaopy-store
+  redis:
+    host: localhost
+    port: 6379
+    password: 962464
+    database: 0
