--- a/sky-server/src/main/resources/application.yml
+++ b/sky-server/src/main/resources/application.yml
@@ -36,12 +36,20 @@ logging:
 
 sky:
   jwt:
+    # 管理端
     # 设置jwt签名加密时使用的秘钥
     admin-secret-key: itxiaopy
     # 设置jwt过期时间
     admin-ttl: 7200000
     # 设置前端传递过来的令牌名称
     admin-token-name: token
+    # 用户端(小程序)
+    user-secret-key: itxiaopy_user
+    user-ttl: 7200000
+    user-token-name: authorization
   alioss:
     endpoint: ${sky.alioss.endpoint}
     bucket-name: ${sky.alioss.bucket-name}
+  wechat:
+    appid: ${sky.wechat.appid}
+    secret: ${sky.wechat.secret}
