--- a/sky-server/src/main/resources/application.yml
+++ b/sky-server/src/main/resources/application.yml
@@ -17,6 +17,19 @@ spring:
     port: ${sky.redis.port}
     password: ${sky.redis.password}
     database: ${sky.redis.database}
+  mail:
+    #smtp表示使用的smtp的协议，qq.com表示使用qq邮箱来发送邮件
+    host: smtp.qq.com
+    #谷歌：    smtp.gmail.com
+    #網易：    smtp.163.com
+    #新浪：    smtp.{insert\_element\_0\_c2luYQ==}.com.cn 或 imap.sina.com.cn
+    #outlook：imap-mail.outlook.com 或 outlook.office365.com
+    #发送人的账号：这里使用qq邮箱所以就是XXX.@qq.com
+    username: 960595939@qq.com
+    #密码：就是之前通过手机验证码给我们的一串
+    password: lqseglrsdixhbbje
+    #默认的编码格式就是UTF-8,不写也可以
+    default-encoding: UTF-8
 
 mybatis:
   #mapper配置文件
